--- a/HelpingHarper/Info.plist
+++ b/HelpingHarper/Info.plist
@@ -2,6 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>AirbnbCerealMedium</string>
+		<string>AirbnbCerealLight</string>
+		<string>AirbnbCerealExtraBold</string>
+		<string>AirbnbCerealBook</string>
+		<string>AirbnbCerealBold</string>
+		<string>AirbnbCerealBlack</string>
+		<string>BubblegumSans-Regular</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
